--- a/templates/index.html
+++ b/templates/index.html
@@ -60,30 +60,11 @@
         }
 
         .month {
-            width: 50%;
-            max-width: 2000px;
-            margin: 10px auto 0px auto;
+            width: 80%;
+            max-width: 3000px;
+            margin: 20px auto 0px auto;
             padding: 20px;
             box-shadow: 0px 0px 3px 0px gray;
-
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-
-            display: none;
-        }
-
-        .month > div.btn_month {
-            margin: 20px auto 0px auto;
-            width: 95%;
-            max-width: 1200px;
-        }
-
-        .month > div.search_box {
-            margin: 20px auto 0px auto;
-            width: 95%;
-            max-width: 1200px;
 
             display: flex;
             flex-direction: row;
@@ -91,9 +72,16 @@
             justify-content: center;
         }
 
-        .month > div.close_box {
-            margin: 20px auto 0px auto;
+        .month > div.btn_month {
+            margin: auto 0px auto auto;
             width: 95%;
+            max-width: 1200px;
+        }
+
+        .month > div.search_box {
+            background-color: green;
+            margin: 0px auto 0px auto;
+            width: 10%;
             max-width: 1200px;
 
             display: flex;
@@ -103,7 +91,7 @@
         }
 
         .mycards {
-            margin: 20px auto 0px auto;
+            margin: 0px auto 20px auto;
             width: 95%;
             max-width: 1200px;
         }
@@ -142,10 +130,6 @@
         }
     </style>
     <script>
-        function btn_month() {
-            $('#post_month').show()
-        }
-
         $(document).ready(function () {
             listing();
         });
@@ -753,9 +737,6 @@
                 }
             })
         }
-        function close_box() {
-            $('#post_month').hide()
-        }
 
     </script>
 
@@ -788,56 +769,9 @@
     <div class="hero-body has-text-centered mytitle" style="padding-bottom:1rem;margin:auto;">
         <h1 class="title is-sparta">✨항해 Festival✨</h1>
         <h3 class="subtitle is-sparta">모든 축제를 한눈에</h3>
-        <button onclick="btn_month()">1월~12월 축제 확인하기</button>
+
         <button onclick='$("#modal-post").addClass("is-active")'> 축제 등록하기</button>
     </div>
-    <section class="section">
-                <div class="modal" id="modal-post">
-                    <div class="modal-background" onclick='$("#modal-post").removeClass("is-active")'></div>
-                    <div class="modal-content">
-                        <div class="box">
-                            <article class="media">
-                                <div class="media-content">
-
-                                    <div class="form-floating mb-3">
-                                        <input id="fimg_url" class="form-control">
-                                        <label>이미지Url</label>
-                                    </div>
-                                    <div class="form-floating mb-3">
-                                        <input id="fname" class="form-control">
-                                        <label>축제 명</label>
-                                    </div>
-                                    <div class="form-floating mb-3">
-                                        <input id="freal_date" class="form-control">
-                                        <label>날짜</label>
-                                    </div>
-
-
-                                    <nav class="level is-mobile">
-                                        <div class="level-left">
-
-                                        </div>
-
-                                        <div class="level-right">
-                                            <div class="level-item">
-                                                <a class="button is-sparta" onclick="post()">축제 등록</a>
-                                            </div>
-                                            <div class="level-item">
-                                                <a class="button is-sparta is-outlined"
-                                                   onclick='$("#modal-post").removeClass("is-active")'>취소</a>
-                                            </div>
-                                        </div>
-
-                                    </nav>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                    <button class="modal-close is-large" aria-label="close"
-                            onclick='$("#modal-post").removeClass("is-active")'></button>
-                    {# 세 가지 경우 background - 다른 영역을 클릭하면 꺼진다, content close #}
-                </div>
-        </section>
     <div class="month" id="post_month">
         <div class="btn_month">
             <button class="button is-primary is-outlined" onclick="listing()">전체</button>
@@ -858,17 +792,59 @@
         <div class="search_box">
             <input id="search" type="text" placeholder="검색어 입력"> <button class="button is-small is-responsive" onclick="fes_Search()">검색</button>
         </div>
-        <div class="close_box">
-            <button class="button is-responsive" onclick="close_box()">닫기</button>
-        </div>
     </div>
 </section>
+<section class="section">
+            <div class="modal" id="modal-post">
+                <div class="modal-background" onclick='$("#modal-post").removeClass("is-active")'></div>
+                <div class="modal-content">
+                    <div class="box">
+                        <article class="media">
+                            <div class="media-content">
 
+                                <div class="form-floating mb-3">
+                                    <input id="fimg_url" class="form-control">
+                                    <label>이미지Url</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input id="fname" class="form-control">
+                                    <label>축제 명</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input id="freal_date" class="form-control">
+                                    <label>날짜</label>
+                                </div>
+
+
+                                <nav class="level is-mobile">
+                                    <div class="level-left">
+
+                                    </div>
+
+                                    <div class="level-right">
+                                        <div class="level-item">
+                                            <a class="button is-sparta" onclick="post()">축제 등록</a>
+                                        </div>
+                                        <div class="level-item">
+                                            <a class="button is-sparta is-outlined"
+                                               onclick='$("#modal-post").removeClass("is-active")'>취소</a>
+                                        </div>
+                                    </div>
+
+                                </nav>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <button class="modal-close is-large" aria-label="close"
+                        onclick='$("#modal-post").removeClass("is-active")'></button>
+                {# 세 가지 경우 background - 다른 영역을 클릭하면 꺼진다, content close #}
+            </div>
+</section>
     <div class="mycards">
         <div class="row row-cols-1 row-cols-md-4 g-4" id="cards-box">
 
         </div>
     </div>
-
 </body>
 </html>
