--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -17,15 +17,15 @@ body {
 }
 
 .button.is-sparta {
-    background-color: #e8344e;
+    background-color: #5ECDB3;
     border-color: transparent;
     color: #fff !important;
 }
 
 .button.is-sparta.is-outlined {
     background-color: transparent;
-    border-color: #e8344e;
-    color: #e8344e !important;
+    border-color: #5ECDB3;
+    color: #5ECDB3 !important;
 }
 
 .modal-content {
