--- a/templates/user.html
+++ b/templates/user.html
@@ -69,7 +69,7 @@
                 <a class="navbar-item" href="/">
                     <img src="{{ url_for('static', filename='cute_dog.ico') }}">
                     <strong class="is-sparta"
-                            style="font-family: 'Stylish', sans-serif;font-size: larger;">HHFestival</strong>
+                            style="color:#5ECDB3; font-family: 'Stylish', sans-serif;font-size: larger;">HHFestival</strong>
                 </a>
 
 
@@ -190,7 +190,7 @@
                     <div class="media-content">
                         <div class="field">
                             <p class="control">
-                                <input id="input-post" class="input is-rounded" placeholder="무슨 생각을 하고 계신가요?"
+                                <input id="input-post" class="input is-rounded" placeholder="나의 기록을 남겨보세요!"
                                  onclick='$("#modal-post").addClass("is-active")'>
                             </p>
                         </div>
