--- a/templates/user.html
+++ b/templates/user.html
@@ -8,8 +8,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='cute_dog.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='cute_dog.ico') }}" type="image/x-icon">
     <meta property="og:title" content="HangHae-Festival"/>
     <meta property="og:description" content="mini project for Web Plus"/>
     <meta property="og:image" content="{{ url_for('static', filename='ogimg.png') }}"/>
